--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     crossorigin=""></script>
 
   <!-- Load Leaflet basemap providers -->
-  <script src="https://unpkg.com/leaflet-providers@1.10.2/leaflet-providers.js"></script>
+  <script src="scripts/leaflet-providers.js"></script>
 
   <!-- Load jQuery  -->
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
